--- a/marketplace_helpdesk/views/res_config_settings_views.xml
+++ b/marketplace_helpdesk/views/res_config_settings_views.xml
@@ -1,25 +1,19 @@
 <odoo>
-    <!-- Vista propia de configuración -->
     <record id="view_marketplace_settings_form" model="ir.ui.view">
         <field name="name">marketplace.settings.form</field>
         <field name="model">res.config.settings</field>
         <field name="arch" type="xml">
             <form string="Configuración de Marketplaces">
                 <sheet>
-                    <group string="Marketplaces">
-                        <h2>Conexión con Mirakl</h2>
-                        <group>
-                            <field name="marketplace_account_ids"
-                                   widget="one2many_list"
-                                   options="{'no_create_edit': False}"/>
-                        </group>
+                    <group string="Conexión Mirakl">
+                        <field name="marketplace_api_url" placeholder="https://mediamarktsaturn.mirakl.net/api/"/>
+                        <field name="marketplace_api_key" password="True"/>
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
 
-    <!-- Acción para abrir la configuración -->
     <record id="action_marketplace_settings" model="ir.actions.act_window">
         <field name="name">Marketplaces</field>
         <field name="res_model">res.config.settings</field>
@@ -28,7 +22,6 @@
         <field name="target">inline</field>
     </record>
 
-    <!-- Menú dentro de Ajustes -->
     <menuitem id="menu_marketplace_settings"
               name="Marketplaces"
               parent="base.menu_config"
