--- a/sale_blacklist_final/views/sale_blacklist_views.xml
+++ b/sale_blacklist_final/views/sale_blacklist_views.xml
@@ -1,70 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-  <!-- VISTA TREE -->
-  <record id="view_sale_blacklist_tree" model="ir.ui.view">
-    <field name="name">sale.blacklist.tree</field>
-    <field name="model">sale.blacklist</field>
-    <field name="arch" type="xml">
-      <tree>
-        <field name="name"/>
-        <field name="zip"/>
-        <field name="city"/>
-        <field name="phone"/>
-        <field name="email"/>
-        <field name="active"/>
-      </tree>
-    </field>
-  </record>
-
-  <!-- VISTA FORM -->
-  <record id="view_sale_blacklist_form" model="ir.ui.view">
-    <field name="name">sale.blacklist.form</field>
-    <field name="model">sale.blacklist</field>
-    <field name="arch" type="xml">
-      <form string="Cliente bloqueado / Blacklist">
-        <sheet>
-          <group>
-            <field name="name"/>
-            <field name="active"/>
-          </group>
-          <group>
-            <field name="zip"/>
-            <field name="city"/>
-            <field name="phone"/>
-            <field name="email"/>
-          </group>
-          <group>
-            <field name="address_substring"/>
-            <field name="name_regex"/>
-          </group>
-          <group>
-            <field name="note"/>
-          </group>
-        </sheet>
-      </form>
-    </field>
-  </record>
-
-  <!-- ACCIÓN -->
-  <record id="action_sale_blacklist" model="ir.actions.act_window">
+  <!-- Acción de ventana visible -->
+  <record id="action_sale_blacklist_manual" model="ir.actions.act_window">
     <field name="name">Clientes bloqueados</field>
     <field name="res_model">sale.blacklist</field>
     <field name="view_mode">tree,form</field>
     <field name="help" type="html">
-      <p>Gestione aquí los clientes o patrones bloqueados por fraude o comportamiento sospechoso.</p>
+      <p>Gestione los clientes y patrones bloqueados por fraude o reincidencia.</p>
     </field>
   </record>
 
-  <!-- MENÚS -->
-  <!-- 🔹 Menú raíz independiente (no depende de Ventas) -->
+  <!-- Menú raíz independiente -->
   <menuitem id="menu_sale_blacklist_root"
             name="Blacklist / Bloqueos"
-            sequence="10"/>
+            sequence="5"/>
 
-  <!-- 🔹 Submenú principal -->
+  <!-- Submenú enlazado -->
   <menuitem id="menu_sale_blacklist"
             name="Clientes bloqueados"
             parent="menu_sale_blacklist_root"
-            action="action_sale_blacklist"
+            action="action_sale_blacklist_manual"
             sequence="1"/>
 </odoo>
