--- a/sale_blacklist_final/views/sale_blacklist_views.xml
+++ b/sale_blacklist_final/views/sale_blacklist_views.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-  <!-- Acción de ventana visible -->
+  <!-- Acción visible -->
   <record id="action_sale_blacklist_manual" model="ir.actions.act_window">
     <field name="name">Clientes bloqueados</field>
     <field name="res_model">sale.blacklist</field>
