--- a/pways_web_integration/views/sale_order_view.xml
+++ b/pways_web_integration/views/sale_order_view.xml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
+
+        <record id="pways_website_integration_cron" model="ir.cron">
+            <field name="name">Integration Cron</field>
+            <field name="user_id" ref="base.user_root"/>
+            <field name="interval_number">30</field>
+            <field name="interval_type">minutes</field>
+            <!-- <field name="numbercall">-1</field> -->
+            <field name="model_id" ref="sale.model_sale_order"/>
+            <field name="state">code</field>
+            <field name="code">model.call_webhook_integration()</field>
+            <field name="priority" eval="5" />
+        </record>
+
+        <record id="pways_view_sale_order_list_inherit" model="ir.ui.view">
+            <field name="name">pways.sale.order.view</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_quotation_tree_with_onboarding"/>
+            <field name="arch" type="xml">
+               <xpath expr="//field[@name='state']" position="after">
+                    <field name="sync_status"/>
+                </xpath>
+            </field>
+        </record>
+
         <record id="pways_view_sale_order_form_inherit" model="ir.ui.view">
             <field name="name">pways.sale.order.view</field>
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
-               <xpath expr="//group[@name='partner_details']//field[@name='partner_shipping_id']" position="after">
+               <xpath expr="//field[@name='partner_shipping_id']" position="after">
                     <field name="sync_status"/>
                 </xpath>
             </field>
