--- a/pways_sale_picking_return_count/wizard/serial_scrap_wizard_views.xml
+++ b/pways_sale_picking_return_count/wizard/serial_scrap_wizard_views.xml
@@ -29,9 +29,7 @@
         <field name="model">stock.return.picking</field>
         <field name="inherit_id" ref="stock.view_stock_return_picking_form"/>
         <field name="arch" type="xml">
-            <!-- <xpath expr="//field[@name='product_return_moves']/tree/field[@name='move_id']" position="after">
-            </xpath> -->
-             <xpath expr="//footer" position="before">
+             <xpath expr="//footer" position="after">
                 <field name="has_problematic_batch" invisible="1"/>
                 <div class="alert alert-warning" role="alert" invisible="has_problematic_batch == False">
                     Advertencia: El contiene lotes problemáticos
